@@ -11,6 +11,12 @@ Revision history for Perl extension Module::Build.
    when running sudo.  [rt.cpan.org 39662]
  - Fixed a small POD error in the Cookbook. [Damyan Ivanov]
 
+ Enhancements
+ - We now support a 'create_license' parameter to new() that will
+   create a LICENSE file during the 'dist' phase with the full text of
+   the license.  This requires Software::License on the author's
+   machine.  THIS ALSO STILL NEEDS DOCS.
+
  Test Fixes
  - Defend against more stray environment variables interfering
    with the tests.
